Update with Decompress Fallback

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Export.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Export.data.gz",
-        frameworkUrl: buildUrl + "/Export.framework.js.gz",
-        codeUrl: buildUrl + "/Export.wasm.gz",
+        dataUrl: buildUrl + "/Export.data.unityweb",
+        frameworkUrl: buildUrl + "/Export.framework.js.unityweb",
+        codeUrl: buildUrl + "/Export.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "test",
